Fix: target menu hidden behind target gallery

--- a/frontend/src/components/targetMenu/TargetMenu.module.css
+++ b/frontend/src/components/targetMenu/TargetMenu.module.css
@@ -2,6 +2,7 @@
   --target-radius: 60px;
   display: none;
   position: absolute;
+  z-index: 2;
 }
 
 .menu {
